// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`composition badge-burst > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 451,
      "y": 151,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 467,
      "y": 151,
    },
    {
      "fontSize": 14,
      "h": 25,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 1001,
    },
    {
      "fontSize": 87,
      "h": 218,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 389,
    },
    {
      "fontSize": 37,
      "h": 67,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 646,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 730,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 730,
    },
  ],
  "typeBudget": 1.5529227519633613,
}
`;

exports[`composition badge-burst > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1920,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 425,
      "y": 269,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 445,
      "y": 269,
    },
    {
      "fontSize": 19,
      "h": 34,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1746,
    },
    {
      "fontSize": 116,
      "h": 290,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 933,
    },
    {
      "fontSize": 35,
      "h": 88,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1275,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 395,
      "x": 343,
      "y": 1385,
    },
    {
      "fontSize": 40,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 395,
      "x": 343,
      "y": 1385,
    },
  ],
  "typeBudget": 1.5529227519633613,
}
`;

exports[`composition badge-burst > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 675,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 529,
      "y": 95,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 542,
      "y": 95,
    },
    {
      "fontSize": 12,
      "h": 22,
      "originId": "legal",
      "type": "text",
      "w": 1110,
      "x": 45,
      "y": 608,
    },
    {
      "fontSize": 73,
      "h": 183,
      "originId": "headline",
      "type": "text",
      "w": 1110,
      "x": 45,
      "y": 243,
    },
    {
      "fontSize": 31,
      "h": 56,
      "originId": "sub",
      "type": "text",
      "w": 1110,
      "x": 45,
      "y": 459,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 53,
      "originId": "cta-bg",
      "type": "shape",
      "w": 248,
      "x": 476,
      "y": 529,
    },
    {
      "fontSize": 25,
      "h": 53,
      "originId": "cta",
      "type": "text",
      "w": 248,
      "x": 476,
      "y": 529,
    },
  ],
  "typeBudget": 1.5529227519633613,
}
`;

exports[`composition banner-strip > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 848,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 864,
      "y": 54,
    },
    {
      "fontSize": 15,
      "h": 27,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 999,
    },
    {
      "fontSize": 92,
      "h": 230,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 497,
    },
    {
      "fontSize": 35,
      "h": 70,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 768,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 856,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 856,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`composition banner-strip > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1920,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 777,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 797,
      "y": 80,
    },
    {
      "fontSize": 20,
      "h": 36,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1744,
    },
    {
      "fontSize": 109,
      "h": 305,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 883,
    },
    {
      "fontSize": 36,
      "h": 92,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1243,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 395,
      "x": 343,
      "y": 1358,
    },
    {
      "fontSize": 40,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 395,
      "x": 343,
      "y": 1358,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`composition banner-strip > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 675,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 0,
    },
    {
      "fontSize": 63,
      "h": 193,
      "originId": "headline",
      "type": "text",
      "w": 527,
      "x": 60,
      "y": 182,
    },
    {
      "fontSize": 30,
      "h": 101,
      "originId": "sub",
      "type": "text",
      "w": 527,
      "x": 60,
      "y": 393,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 48,
      "originId": "cta-bg",
      "type": "shape",
      "w": 227,
      "x": 764,
      "y": 318,
    },
    {
      "fontSize": 23,
      "h": 48,
      "originId": "cta",
      "type": "text",
      "w": 227,
      "x": 764,
      "y": 318,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`composition centred-emblem > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "fontSize": 66,
      "h": 114,
      "originId": "headline",
      "type": "text",
      "w": 961,
      "x": 59,
      "y": 399,
    },
    {
      "fontSize": 35,
      "h": 59,
      "originId": "sub",
      "type": "text",
      "w": 961,
      "x": 59,
      "y": 557,
    },
    {
      "fontSize": 13,
      "h": 22,
      "originId": "legal",
      "type": "text",
      "w": 961,
      "x": 59,
      "y": 659,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`composition centred-emblem > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "fontSize": 110,
      "h": 303,
      "originId": "headline",
      "type": "text",
      "w": 922,
      "x": 79,
      "y": 628,
    },
    {
      "fontSize": 46,
      "h": 155,
      "originId": "sub",
      "type": "text",
      "w": 922,
      "x": 79,
      "y": 989,
    },
    {
      "fontSize": 18,
      "h": 30,
      "originId": "legal",
      "type": "text",
      "w": 922,
      "x": 79,
      "y": 1202,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`composition centred-emblem > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "fontSize": 69,
      "h": 95,
      "originId": "headline",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 220,
    },
    {
      "fontSize": 29,
      "h": 49,
      "originId": "sub",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 351,
    },
    {
      "fontSize": 11,
      "h": 19,
      "originId": "legal",
      "type": "text",
      "w": 1080,
      "x": 60,
      "y": 436,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`composition editorial-sidebar > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "editorial-sidebar-bg",
      "type": "shape",
      "w": 410,
      "x": 0,
      "y": 0,
    },
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 670,
      "x": 410,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 54,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 70,
      "y": 54,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 302,
      "x": 54,
      "y": 1006,
    },
    {
      "fontSize": 47,
      "h": 165,
      "originId": "headline",
      "type": "text",
      "w": 302,
      "x": 54,
      "y": 388,
    },
    {
      "fontSize": 18,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 302,
      "x": 54,
      "y": 583,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 54,
      "y": 662,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 54,
      "y": 662,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`composition editorial-sidebar > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1920,
      "originId": "editorial-sidebar-bg",
      "type": "shape",
      "w": 410,
      "x": 0,
      "y": 0,
    },
    {
      "h": 1920,
      "originId": "img",
      "type": "image",
      "w": 670,
      "x": 410,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 72,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 92,
      "y": 80,
    },
    {
      "fontSize": 14,
      "h": 25,
      "originId": "legal",
      "type": "text",
      "w": 266,
      "x": 72,
      "y": 1755,
    },
    {
      "fontSize": 45,
      "h": 220,
      "originId": "headline",
      "type": "text",
      "w": 266,
      "x": 72,
      "y": 724,
    },
    {
      "fontSize": 19,
      "h": 83,
      "originId": "sub",
      "type": "text",
      "w": 266,
      "x": 72,
      "y": 984,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 266,
      "x": 72,
      "y": 1088,
    },
    {
      "fontSize": 36,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 266,
      "x": 72,
      "y": 1088,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`composition editorial-sidebar > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 675,
      "originId": "editorial-sidebar-bg",
      "type": "shape",
      "w": 456,
      "x": 0,
      "y": 0,
    },
    {
      "h": 675,
      "originId": "img",
      "type": "image",
      "w": 744,
      "x": 456,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 60,
      "y": 45,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 73,
      "y": 45,
    },
    {
      "fontSize": 9,
      "h": 16,
      "originId": "legal",
      "type": "text",
      "w": 351,
      "x": 60,
      "y": 614,
    },
    {
      "fontSize": 44,
      "h": 138,
      "originId": "headline",
      "type": "text",
      "w": 351,
      "x": 60,
      "y": 210,
    },
    {
      "fontSize": 18,
      "h": 52,
      "originId": "sub",
      "type": "text",
      "w": 351,
      "x": 60,
      "y": 373,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 53,
      "originId": "cta-bg",
      "type": "shape",
      "w": 248,
      "x": 60,
      "y": 438,
    },
    {
      "fontSize": 25,
      "h": 53,
      "originId": "cta",
      "type": "text",
      "w": 248,
      "x": 60,
      "y": 438,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`composition hero-fullbleed > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 848,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 864,
      "y": 54,
    },
    {
      "fontSize": 15,
      "h": 27,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 999,
    },
    {
      "fontSize": 92,
      "h": 230,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 497,
    },
    {
      "fontSize": 35,
      "h": 70,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 768,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 856,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 856,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`composition hero-fullbleed > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1920,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 777,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 797,
      "y": 80,
    },
    {
      "fontSize": 20,
      "h": 36,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1744,
    },
    {
      "fontSize": 109,
      "h": 305,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 883,
    },
    {
      "fontSize": 36,
      "h": 92,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1243,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 395,
      "x": 343,
      "y": 1358,
    },
    {
      "fontSize": 40,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 395,
      "x": 343,
      "y": 1358,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`composition hero-fullbleed > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 675,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 40,
      "originId": "badge-bg",
      "type": "shape",
      "w": 136,
      "x": 1004,
      "y": 45,
    },
    {
      "fontSize": 20,
      "h": 40,
      "originId": "badge",
      "type": "text",
      "w": 112,
      "x": 1016,
      "y": 45,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 1110,
      "x": 45,
      "y": 610,
    },
    {
      "fontSize": 70,
      "h": 175,
      "originId": "headline",
      "type": "text",
      "w": 1110,
      "x": 45,
      "y": 311,
    },
    {
      "fontSize": 30,
      "h": 54,
      "originId": "sub",
      "type": "text",
      "w": 1110,
      "x": 45,
      "y": 518,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 48,
      "originId": "cta-bg",
      "type": "shape",
      "w": 227,
      "x": 487,
      "y": 581,
    },
    {
      "fontSize": 23,
      "h": 48,
      "originId": "cta",
      "type": "text",
      "w": 227,
      "x": 487,
      "y": 581,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`composition minimal-centered > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 410,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 451,
      "y": 464,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 467,
      "y": 464,
    },
    {
      "fontSize": 13,
      "h": 23,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 1003,
    },
    {
      "fontSize": 83,
      "h": 208,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 542,
    },
    {
      "fontSize": 35,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 787,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 866,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 866,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`composition minimal-centered > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 730,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 425,
      "y": 802,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 445,
      "y": 802,
    },
    {
      "fontSize": 18,
      "h": 32,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1748,
    },
    {
      "fontSize": 110,
      "h": 275,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 906,
    },
    {
      "fontSize": 36,
      "h": 83,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1231,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 395,
      "x": 343,
      "y": 1335,
    },
    {
      "fontSize": 40,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 395,
      "x": 343,
      "y": 1335,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`composition minimal-centered > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 257,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 529,
      "y": 302,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 542,
      "y": 302,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 1110,
      "x": 45,
      "y": 610,
    },
    {
      "fontSize": 69,
      "h": 173,
      "originId": "headline",
      "type": "text",
      "w": 1110,
      "x": 45,
      "y": 367,
    },
    {
      "fontSize": 10,
      "h": 16,
      "originId": "sub",
      "type": "text",
      "w": 1110,
      "x": 45,
      "y": 571,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`composition overlap-card > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "fontSize": 92,
      "h": 253,
      "originId": "headline",
      "type": "text",
      "w": 832,
      "x": 124,
      "y": 543,
    },
    {
      "fontSize": 31,
      "h": 66,
      "originId": "sub",
      "type": "text",
      "w": 832,
      "x": 124,
      "y": 817,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 905,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 905,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 451,
      "y": 470,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 467,
      "y": 470,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`composition overlap-card > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1920,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "fontSize": 98,
      "h": 336,
      "originId": "headline",
      "type": "text",
      "w": 749,
      "x": 166,
      "y": 1060,
    },
    {
      "fontSize": 45,
      "h": 172,
      "originId": "sub",
      "type": "text",
      "w": 749,
      "x": 166,
      "y": 1425,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 395,
      "x": 343,
      "y": 1626,
    },
    {
      "fontSize": 40,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 395,
      "x": 343,
      "y": 1626,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 425,
      "y": 963,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 445,
      "y": 963,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`composition overlap-card > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 675,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 0,
    },
    {
      "fontSize": 70,
      "h": 96,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 114,
      "y": 350,
    },
    {
      "fontSize": 30,
      "h": 51,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 114,
      "y": 464,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 48,
      "originId": "cta-bg",
      "type": "shape",
      "w": 227,
      "x": 487,
      "y": 533,
    },
    {
      "fontSize": 23,
      "h": 48,
      "originId": "cta",
      "type": "text",
      "w": 227,
      "x": 487,
      "y": 533,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 40,
      "originId": "badge-bg",
      "type": "shape",
      "w": 136,
      "x": 532,
      "y": 293,
    },
    {
      "fontSize": 20,
      "h": 40,
      "originId": "badge",
      "type": "text",
      "w": 112,
      "x": 544,
      "y": 293,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`composition poster-frame > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 385,
      "originId": "img",
      "type": "image",
      "w": 875,
      "x": 103,
      "y": 103,
    },
    {
      "fontSize": 83,
      "h": 228,
      "originId": "headline",
      "type": "text",
      "w": 875,
      "x": 103,
      "y": 520,
    },
    {
      "fontSize": 31,
      "h": 59,
      "originId": "sub",
      "type": "text",
      "w": 875,
      "x": 103,
      "y": 781,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 872,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 872,
    },
    {
      "fontSize": 13,
      "h": 22,
      "originId": "legal",
      "type": "text",
      "w": 875,
      "x": 103,
      "y": 955,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`composition poster-frame > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 856,
      "originId": "img",
      "type": "image",
      "w": 806,
      "x": 137,
      "y": 138,
    },
    {
      "fontSize": 99,
      "h": 303,
      "originId": "headline",
      "type": "text",
      "w": 806,
      "x": 137,
      "y": 1037,
    },
    {
      "fontSize": 46,
      "h": 155,
      "originId": "sub",
      "type": "text",
      "w": 806,
      "x": 137,
      "y": 1383,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 395,
      "x": 343,
      "y": 1581,
    },
    {
      "fontSize": 40,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 395,
      "x": 343,
      "y": 1581,
    },
    {
      "fontSize": 18,
      "h": 30,
      "originId": "legal",
      "type": "text",
      "w": 806,
      "x": 137,
      "y": 1692,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`composition poster-frame > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 191,
      "originId": "img",
      "type": "image",
      "w": 1008,
      "x": 96,
      "y": 86,
    },
    {
      "fontSize": 69,
      "h": 95,
      "originId": "headline",
      "type": "text",
      "w": 1008,
      "x": 96,
      "y": 304,
    },
    {
      "fontSize": 29,
      "h": 49,
      "originId": "sub",
      "type": "text",
      "w": 1008,
      "x": 96,
      "y": 426,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 53,
      "originId": "cta-bg",
      "type": "shape",
      "w": 248,
      "x": 476,
      "y": 502,
    },
    {
      "fontSize": 25,
      "h": 53,
      "originId": "cta",
      "type": "text",
      "w": 248,
      "x": 476,
      "y": 502,
    },
    {
      "fontSize": 11,
      "h": 19,
      "originId": "legal",
      "type": "text",
      "w": 1008,
      "x": 96,
      "y": 571,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`composition split-panel > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "split-panel-bg",
      "type": "shape",
      "w": 497,
      "x": 0,
      "y": 0,
    },
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 583,
      "x": 497,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 54,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 70,
      "y": 54,
    },
    {
      "fontSize": 11,
      "h": 20,
      "originId": "legal",
      "type": "text",
      "w": 389,
      "x": 54,
      "y": 1006,
    },
    {
      "fontSize": 47,
      "h": 165,
      "originId": "headline",
      "type": "text",
      "w": 389,
      "x": 54,
      "y": 388,
    },
    {
      "fontSize": 21,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 389,
      "x": 54,
      "y": 583,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 54,
      "y": 662,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 54,
      "y": 662,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`composition split-panel > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1920,
      "originId": "split-panel-bg",
      "type": "shape",
      "w": 497,
      "x": 0,
      "y": 0,
    },
    {
      "h": 1920,
      "originId": "img",
      "type": "image",
      "w": 583,
      "x": 497,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 72,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 92,
      "y": 80,
    },
    {
      "fontSize": 14,
      "h": 25,
      "originId": "legal",
      "type": "text",
      "w": 353,
      "x": 72,
      "y": 1755,
    },
    {
      "fontSize": 63,
      "h": 220,
      "originId": "headline",
      "type": "text",
      "w": 353,
      "x": 72,
      "y": 724,
    },
    {
      "fontSize": 22,
      "h": 83,
      "originId": "sub",
      "type": "text",
      "w": 353,
      "x": 72,
      "y": 984,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 353,
      "x": 72,
      "y": 1088,
    },
    {
      "fontSize": 40,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 353,
      "x": 72,
      "y": 1088,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`composition split-panel > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 675,
      "originId": "split-panel-bg",
      "type": "shape",
      "w": 552,
      "x": 0,
      "y": 0,
    },
    {
      "h": 675,
      "originId": "img",
      "type": "image",
      "w": 648,
      "x": 552,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 60,
      "y": 45,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 73,
      "y": 45,
    },
    {
      "fontSize": 9,
      "h": 16,
      "originId": "legal",
      "type": "text",
      "w": 447,
      "x": 60,
      "y": 614,
    },
    {
      "fontSize": 55,
      "h": 138,
      "originId": "headline",
      "type": "text",
      "w": 447,
      "x": 60,
      "y": 210,
    },
    {
      "fontSize": 18,
      "h": 52,
      "originId": "sub",
      "type": "text",
      "w": 447,
      "x": 60,
      "y": 373,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 53,
      "originId": "cta-bg",
      "type": "shape",
      "w": 248,
      "x": 60,
      "y": 438,
    },
    {
      "fontSize": 25,
      "h": 53,
      "originId": "cta",
      "type": "text",
      "w": 248,
      "x": 60,
      "y": 438,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`composition stacked-thirds > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 635,
      "originId": "img",
      "type": "image",
      "w": 961,
      "x": 59,
      "y": 232,
    },
    {
      "fontSize": 65,
      "h": 100,
      "originId": "headline",
      "type": "text",
      "w": 961,
      "x": 59,
      "y": 110,
    },
    {
      "fontSize": 35,
      "h": 59,
      "originId": "sub",
      "type": "text",
      "w": 961,
      "x": 59,
      "y": 889,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 963,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 963,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 451,
      "y": 59,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 467,
      "y": 59,
    },
  ],
  "typeBudget": 1.7190723260611362,
}
`;

exports[`composition stacked-thirds > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1053,
      "originId": "img",
      "type": "image",
      "w": 922,
      "x": 79,
      "y": 447,
    },
    {
      "fontSize": 98,
      "h": 270,
      "originId": "headline",
      "type": "text",
      "w": 922,
      "x": 79,
      "y": 148,
    },
    {
      "fontSize": 46,
      "h": 155,
      "originId": "sub",
      "type": "text",
      "w": 922,
      "x": 79,
      "y": 1528,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 395,
      "x": 342,
      "y": 1696,
    },
    {
      "fontSize": 40,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 395,
      "x": 342,
      "y": 1696,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 424,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 444,
      "y": 80,
    },
  ],
  "typeBudget": 1.7190723260611362,
}
`;

exports[`composition stacked-thirds > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 675,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 997,
      "y": 45,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 1010,
      "y": 45,
    },
    {
      "fontSize": 10,
      "h": 18,
      "originId": "legal",
      "type": "text",
      "w": 1110,
      "x": 45,
      "y": 612,
    },
    {
      "fontSize": 61,
      "h": 153,
      "originId": "headline",
      "type": "text",
      "w": 1110,
      "x": 45,
      "y": 101,
    },
    {
      "fontSize": 29,
      "h": 52,
      "originId": "sub",
      "type": "text",
      "w": 1110,
      "x": 45,
      "y": 266,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 53,
      "originId": "cta-bg",
      "type": "shape",
      "w": 248,
      "x": 476,
      "y": 529,
    },
    {
      "fontSize": 25,
      "h": 53,
      "originId": "cta",
      "type": "text",
      "w": 248,
      "x": 476,
      "y": 529,
    },
  ],
  "typeBudget": 1.7190723260611362,
}
`;

exports[`composition top-bottom > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 848,
      "y": 54,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 864,
      "y": 54,
    },
    {
      "fontSize": 12,
      "h": 22,
      "originId": "legal",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 1004,
    },
    {
      "fontSize": 73,
      "h": 183,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 123,
    },
    {
      "fontSize": 35,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 427,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 905,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 905,
    },
  ],
  "typeBudget": 1.7190723260611362,
}
`;

exports[`composition top-bottom > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "h": 1920,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 777,
      "y": 80,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 797,
      "y": 80,
    },
    {
      "fontSize": 16,
      "h": 29,
      "originId": "legal",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 1751,
    },
    {
      "fontSize": 98,
      "h": 245,
      "originId": "headline",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 162,
    },
    {
      "fontSize": 36,
      "h": 83,
      "originId": "sub",
      "type": "text",
      "w": 936,
      "x": 72,
      "y": 758,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 395,
      "x": 343,
      "y": 1619,
    },
    {
      "fontSize": 40,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 395,
      "x": 343,
      "y": 1619,
    },
  ],
  "typeBudget": 1.7190723260611362,
}
`;

exports[`composition top-bottom > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "h": 675,
      "originId": "img",
      "type": "image",
      "w": 1200,
      "x": 0,
      "y": 0,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 997,
      "y": 45,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 1010,
      "y": 45,
    },
    {
      "fontSize": 10,
      "h": 18,
      "originId": "legal",
      "type": "text",
      "w": 1110,
      "x": 45,
      "y": 612,
    },
    {
      "fontSize": 61,
      "h": 153,
      "originId": "headline",
      "type": "text",
      "w": 1110,
      "x": 45,
      "y": 101,
    },
    {
      "fontSize": 29,
      "h": 52,
      "originId": "sub",
      "type": "text",
      "w": 1110,
      "x": 45,
      "y": 266,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 53,
      "originId": "cta-bg",
      "type": "shape",
      "w": 248,
      "x": 476,
      "y": 529,
    },
    {
      "fontSize": 25,
      "h": 53,
      "originId": "cta",
      "type": "text",
      "w": 248,
      "x": 476,
      "y": 529,
    },
  ],
  "typeBudget": 1.7190723260611362,
}
`;

exports[`composition type-dominant > lays out on 'ig-post' 1`] = `
{
  "children": [
    {
      "fontSize": 66,
      "h": 114,
      "originId": "headline",
      "type": "text",
      "w": 918,
      "x": 81,
      "y": 399,
    },
    {
      "fontSize": 35,
      "h": 59,
      "originId": "sub",
      "type": "text",
      "w": 918,
      "x": 81,
      "y": 557,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 659,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 659,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 52,
      "originId": "badge-bg",
      "type": "shape",
      "w": 178,
      "x": 451,
      "y": 305,
    },
    {
      "fontSize": 26,
      "h": 52,
      "originId": "badge",
      "type": "text",
      "w": 146,
      "x": 467,
      "y": 305,
    },
    {
      "fontSize": 13,
      "h": 22,
      "originId": "legal",
      "type": "text",
      "w": 918,
      "x": 81,
      "y": 753,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`composition type-dominant > lays out on 'ig-story' 1`] = `
{
  "children": [
    {
      "fontSize": 110,
      "h": 303,
      "originId": "headline",
      "type": "text",
      "w": 864,
      "x": 108,
      "y": 628,
    },
    {
      "fontSize": 46,
      "h": 155,
      "originId": "sub",
      "type": "text",
      "w": 864,
      "x": 108,
      "y": 989,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 84,
      "originId": "cta-bg",
      "type": "shape",
      "w": 395,
      "x": 342,
      "y": 1202,
    },
    {
      "fontSize": 40,
      "h": 84,
      "originId": "cta",
      "type": "text",
      "w": 395,
      "x": 342,
      "y": 1202,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 68,
      "originId": "badge-bg",
      "type": "shape",
      "w": 231,
      "x": 424,
      "y": 503,
    },
    {
      "fontSize": 34,
      "h": 68,
      "originId": "badge",
      "type": "text",
      "w": 191,
      "x": 444,
      "y": 503,
    },
    {
      "fontSize": 18,
      "h": 30,
      "originId": "legal",
      "type": "text",
      "w": 864,
      "x": 108,
      "y": 1327,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`composition type-dominant > lays out on 'tw-post' 1`] = `
{
  "children": [
    {
      "fontSize": 69,
      "h": 95,
      "originId": "headline",
      "type": "text",
      "w": 1044,
      "x": 78,
      "y": 220,
    },
    {
      "fontSize": 29,
      "h": 49,
      "originId": "sub",
      "type": "text",
      "w": 1044,
      "x": 78,
      "y": 351,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 53,
      "originId": "cta-bg",
      "type": "shape",
      "w": 248,
      "x": 476,
      "y": 436,
    },
    {
      "fontSize": 25,
      "h": 53,
      "originId": "cta",
      "type": "text",
      "w": 248,
      "x": 476,
      "y": 436,
    },
    {
      "h": 0,
      "originId": "badge-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 42,
      "originId": "badge-bg",
      "type": "shape",
      "w": 143,
      "x": 529,
      "y": 142,
    },
    {
      "fontSize": 21,
      "h": 42,
      "originId": "badge",
      "type": "text",
      "w": 117,
      "x": 542,
      "y": 142,
    },
    {
      "fontSize": 11,
      "h": 19,
      "originId": "legal",
      "type": "text",
      "w": 1044,
      "x": 78,
      "y": 514,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`legacy composition badge-burst slot variants > with no imagery at all, which redirects the panel layouts 1`] = `
{
  "children": [
    {
      "fontSize": 87,
      "h": 218,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 485,
    },
    {
      "fontSize": 37,
      "h": 67,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 742,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 826,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 826,
    },
  ],
  "typeBudget": 1.5529227519633613,
}
`;

exports[`legacy composition badge-burst slot variants > without a footer, so the balance shift stays capped 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "fontSize": 87,
      "h": 218,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 485,
    },
    {
      "fontSize": 37,
      "h": 67,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 742,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 826,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 826,
    },
  ],
  "typeBudget": 1.5529227519633613,
}
`;

exports[`legacy composition editorial-sidebar slot variants > with no imagery at all, which redirects the panel layouts 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "editorial-sidebar-bg",
      "type": "shape",
      "w": 410,
      "x": 0,
      "y": 0,
    },
    {
      "fontSize": 47,
      "h": 165,
      "originId": "headline",
      "type": "text",
      "w": 302,
      "x": 54,
      "y": 200,
    },
    {
      "fontSize": 18,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 302,
      "x": 54,
      "y": 395,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 54,
      "y": 474,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 54,
      "y": 474,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`legacy composition editorial-sidebar slot variants > without a footer, so the balance shift stays capped 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "editorial-sidebar-bg",
      "type": "shape",
      "w": 410,
      "x": 0,
      "y": 0,
    },
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 670,
      "x": 410,
      "y": 0,
    },
    {
      "fontSize": 47,
      "h": 165,
      "originId": "headline",
      "type": "text",
      "w": 302,
      "x": 54,
      "y": 200,
    },
    {
      "fontSize": 18,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 302,
      "x": 54,
      "y": 395,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 54,
      "y": 474,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 54,
      "y": 474,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`legacy composition hero-fullbleed slot variants > with no imagery at all, which redirects the panel layouts 1`] = `
{
  "children": [
    {
      "fontSize": 92,
      "h": 230,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 497,
    },
    {
      "fontSize": 35,
      "h": 70,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 768,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 856,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 856,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`legacy composition hero-fullbleed slot variants > without a footer, so the balance shift stays capped 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "fontSize": 92,
      "h": 230,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 497,
    },
    {
      "fontSize": 35,
      "h": 70,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 768,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 856,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 856,
    },
  ],
  "typeBudget": 1.2252297305744826,
}
`;

exports[`legacy composition minimal-centered slot variants > with no imagery at all, which redirects the panel layouts 1`] = `
{
  "children": [
    {
      "fontSize": 83,
      "h": 208,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 338,
    },
    {
      "fontSize": 35,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 583,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 662,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 662,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`legacy composition minimal-centered slot variants > without a footer, so the balance shift stays capped 1`] = `
{
  "children": [
    {
      "h": 410,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "fontSize": 83,
      "h": 208,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 464,
    },
    {
      "fontSize": 35,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 709,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 788,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 788,
    },
  ],
  "typeBudget": 1.444715328568551,
}
`;

exports[`legacy composition split-panel slot variants > with no imagery at all, which redirects the panel layouts 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "split-panel-bg",
      "type": "shape",
      "w": 497,
      "x": 0,
      "y": 0,
    },
    {
      "fontSize": 47,
      "h": 165,
      "originId": "headline",
      "type": "text",
      "w": 389,
      "x": 54,
      "y": 200,
    },
    {
      "fontSize": 21,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 389,
      "x": 54,
      "y": 395,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 54,
      "y": 474,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 54,
      "y": 474,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`legacy composition split-panel slot variants > without a footer, so the balance shift stays capped 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "split-panel-bg",
      "type": "shape",
      "w": 497,
      "x": 0,
      "y": 0,
    },
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 583,
      "x": 497,
      "y": 0,
    },
    {
      "fontSize": 47,
      "h": 165,
      "originId": "headline",
      "type": "text",
      "w": 389,
      "x": 54,
      "y": 200,
    },
    {
      "fontSize": 21,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 389,
      "x": 54,
      "y": 395,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 54,
      "y": 474,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 54,
      "y": 474,
    },
  ],
  "typeBudget": 3.125586047383884,
}
`;

exports[`legacy composition top-bottom slot variants > with no imagery at all, which redirects the panel layouts 1`] = `
{
  "children": [
    {
      "fontSize": 73,
      "h": 183,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 54,
    },
    {
      "fontSize": 35,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 427,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 954,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 954,
    },
  ],
  "typeBudget": 1.7190723260611362,
}
`;

exports[`legacy composition top-bottom slot variants > without a footer, so the balance shift stays capped 1`] = `
{
  "children": [
    {
      "h": 1080,
      "originId": "img",
      "type": "image",
      "w": 1080,
      "x": 0,
      "y": 0,
    },
    {
      "fontSize": 73,
      "h": 183,
      "originId": "headline",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 54,
    },
    {
      "fontSize": 35,
      "h": 63,
      "originId": "sub",
      "type": "text",
      "w": 972,
      "x": 54,
      "y": 427,
    },
    {
      "h": 0,
      "originId": "cta-group",
      "type": "group",
      "w": 0,
      "x": 0,
      "y": 0,
    },
    {
      "h": 63,
      "originId": "cta-bg",
      "type": "shape",
      "w": 296,
      "x": 392,
      "y": 954,
    },
    {
      "fontSize": 30,
      "h": 63,
      "originId": "cta",
      "type": "text",
      "w": 296,
      "x": 392,
      "y": 954,
    },
  ],
  "typeBudget": 1.7190723260611362,
}
`;
